--- a/public/pages/admin/index.html
+++ b/public/pages/admin/index.html
@@ -47,14 +47,14 @@
                 <a class="pull-left btn btn-default" ui-sref=".all"><i
                         class="fa fa-th-large"></i>All</a>
 
-                <form class="form-inline pull-right" role="form">
+                <form class="form-inline pull-right" role="form" ng-submit="addGroup(groupName)">
                     <div class="form-group">
                         <label class="sr-only" for="add-group-name">Email address</label>
                         <input type="text" ng-model="groupName" name="groupName" class="form-control"
                                id="add-group-name"
                                placeholder="Enter a Group Name" required>
                     </div>
-                    <button type="button" ng-click="addGroup(groupName)" class="btn btn-default"><i
+                    <button type="submit" class="btn btn-default"><i
                             class="fa fa-plus"></i>Add Group
                     </button>
                 </form>
