--- a/public/pages/templates.html
+++ b/public/pages/templates.html
@@ -1,35 +1,29 @@
   <div flex layout="column">
     <div flex layout="row">
-      <div flex layout="column">
-        <md-toolbar md-theme="indigo" md-scroll-shrink>
+      <div flex="20" layout="column">
+        <md-toolbar md-theme="indigo">
           <h2 class="md-toolbar-tools page-heading">
             <a href class="menu-icon" hide="true" show-phone="true" show-tablet="true" ng-click="toggleNav()">
               <i class="fa fa-bars"></i>
             </a>
 
-            <span>Manage Templates</span>
+            <span>Available Templates</span>
           </h2>
         </md-toolbar>
 
         <md-content flex layout="row" layout-phone="column" layout-wrap="wrap" style="padding: 3px; background-color: #ddd">
-          <div class="grid-item" ng-repeat="template in templates" layout="column">
-            <div layout="column" style="flex: 3; -webkit-flex: 3;">
-              <flow-editor flow="template.flow" display-only="true"></flow-editor>
-            </div>
-            <div flex layout="row" style="background-color: white; padding: 0 10px;">
+          <div class="grid-item" ng-repeat="template in templates" layout="column" ng-class="{selected: (template === currentTemplate)}">
+            <div flex layout="row" style="padding: 0 10px;" ng-click="setCurrentTemplate(template)">
               <section style="padding: 10px; flex: 6; -wekbit-flex: 6;">
                 <h3 style="padding: 0; margin: 5px 0;">{{template.name}}</h3>
                 <h4 style="padding: 0; margin: 5px 0;">{{template.created | date: 'short'}}</h4>
-              </section>
-              <section flex style="padding: 15px">
-                <md-button ng-click="setCurrentTemplate(template)"><i class="fa fa-pencil fa-2x"></i></md-button>
               </section>
             </div>
           </div>
         </md-content>
       </div>
 
-      <div layout-fill flex layout="column">
+      <div layout-fill flex="80" layout="column">
         <div flex layout="column">
 
           <i ng-click="confirmDeleteTemplate(currentTemplate.uuid)" class="fa fa-trash fa-2x" style="position: absolute; right: 20px; top: 10px"></i>
