--- a/public/pages/flow-browser-debug-controls.html
+++ b/public/pages/flow-browser-debug-controls.html
@@ -1,5 +1,8 @@
 <div class="btn-group">
-  <button class="btn btn-default btn-sm" ng-click="debugLines.length = 0">
+  <button class="btn btn-default btn-sm" title="Clear Log" ng-click="debugLines.length = 0">
     <i class="fa fa-ban fa-lg"></i>
+  </button>
+  <button class="btn btn-default btn-sm" ng-click="toggleViewSource()" ng-class="{'active' : viewSource}" title="View Source" tooltip="View Source">
+    <i class="fa fa-code fa-lg"></i>
   </button>
 </div>
