--- a/public/pages/flow-browser-debug.html
+++ b/public/pages/flow-browser-debug.html
@@ -1,7 +1,12 @@
-<h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
-<ul class="flow-browser-debug">
-  <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id}">
-  	<small>{{ debug.date | date: 'short'}} - {{ debug.message.name }}</small>
-    <prism code="debug.message"></prism>
-  </li>
-</ul>
+<div ng-if="viewSource" class="full-height">
+  <pre>{{ activeFlow | json }}</pre>
+</div>
+<div ng-if="!viewSource">
+  <h5 ng-if="flow.selectedFlowNode.name">Selected Node: {{ flow.selectedFlowNode.name }}</h5>
+  <ul class="flow-browser-debug">
+    <li ng-repeat="debug in debugLines | filter : {$: flow.selectedFlowNode.id}">
+    	<small>{{ debug.date | date: 'short'}} - {{ debug.message.name }}</small>
+      <prism code="debug.message"></prism>
+    </li>
+  </ul>
+</div>
