moved http method outside of dropdown/display name area

--- a/public/pages/endpoint_selector.html
+++ b/public/pages/endpoint_selector.html
@@ -4,8 +4,7 @@
     <select id="selectedEndpoint" ng-model="selectedEndpoint" ng-options="getEndpointLabel(endpoint) for endpoint in resources" class="form-control"></select>
   </div>
 	<div class="form-group" >
-    <label for="selectedEndpoint">Endpoint URL</label>
-    <span>{{ selectedEndpoint.url }}</span>
+    <small>{{ selectedEndpoint.httpMethod + ' ' + selectedEndpoint.url  }}</small>
   </div>
   <param-input ng-model="node.headerParams" param-definitions="headerParamDefinitions"></param-input>
   <param-input ng-model="node.urlParams"   	param-definitions="urlParamDefinitions"></param-input>
