--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -16,7 +16,7 @@
         <ul class="dropdown-menu" role="menu" aria-labelledby="flowMenuDropdown" style="max-height: {{flowSelectorHeight}}px;">
           <li class="text-center" data-toggle="dropdown" ng-click="addFlow()"><a class="fa fa-plus" href></a></li>
           <li role="presentation"  class="divider"></li>
-          <li class="flow-item" data-toggle="dropdown" ng-click="setActiveFlow(flow)" ng-repeat="flow in flows | orderBy: 'name'" >
+          <li class="flow-item" data-toggle="dropdown" ng-repeat="flow in flows | orderBy: 'name'" >
             <a ui-sref="flow({flowId: flow.flowId})"><i class="fa fa-fw fa-power-off" ng-class="{'text-muted' : !flow.online, 'text-success' : flow.online}"></i> {{flow.name}}</a>
           </li>
         </ul>
