Hide sidenav by default on the templates page, closes #1088

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -1,5 +1,5 @@
 <div class="materialize" layout="row">
-  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$media('md')" md-is-open="navIsOpen">
+  <md-sidenav class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-open="navIsOpen">
     <md-toolbar class="md-medium-tall md-indigo-theme" layout-align="center">
       <a href class="navbar-logo">
         <img src="/assets/images/octoblu_logo.png">
