Sidenav the home page

--- a/public/pages/flow-import.html
+++ b/public/pages/flow-import.html
@@ -1,6 +1,6 @@
 <md-toolbar md-theme="indigo">
   <h2 class="md-toolbar-tools page-heading">
-    <a href class="menu-icon" hide="true" show-phone="true" show-tablet="true" ng-click="toggleNav()">
+    <a href class="menu-icon" ng-click="toggleNav()">
       <i class="fa fa-bars"></i>
     </a>
 
