--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,14 +1,14 @@
-<div class="col-xs-12">
-  <div class="page-header page-header-with-buttons">
-    <h1>
-      <i class="fa fa-home"></i>
-      <span>Welcome to Octoblu! </span>
-    </h1>
-  </div>
+<md-toolbar md-theme="indigo">
+  <h2 class="md-toolbar-tools page-heading">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
 
-  <h4>Connect things, systems, and people to our Internet of Things (IoT) platform to design flows, process events/data, and analyze/react to results, trends, and anomolies.</h4>
-  <br />
-</div>
+    <span>Home</span>
+  </h2>
+</md-toolbar>
+
+<br>
 
 <div class="container col-md-12">
   <div class="row-flex row-flex-wrap">
