--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -7,7 +7,7 @@
     </md-toolbar>
 
     <md-content>
-      <a href ui-sref="ob.home" layout="row" layout-align="start center">
+      <a href ui-sref="material.home" layout="row" layout-align="start center">
         <i class="fa fa-home fa-lg"></i>
         <span>Home</span>
       </a>
