--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -7,7 +7,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-link" href ui-sref="ob.home">
+            <a class="navbar-link" href ui-sref="material.home">
                 <img src="/assets/images/octoblu.png" height="50px"/>
             </a>
         </div>
