--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -39,6 +39,17 @@
         <i class="fa fa-group fa-lg"></i>
         <span>Community</span>
       </a>
+
+      <md-divider></md-divider>
+
+      <a href ui-sref="ob.profile" layout="row" layout-align="start center">
+        <i class="fa fa-user fa-lg"></i>
+        <span>Profile</span>
+      </a>
+      <a href ng-click="logout()" layout="row" layout-align="start center">
+        <i class="fa fa-sign-out fa-lg"></i>
+        <span>Sign out</span>
+      </a>
     </md-content>
   </md-sidenav>
 
