--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -11,7 +11,7 @@
         <i class="fa fa-home fa-lg"></i>
         <span>Home</span>
       </a>
-      <a href ui-sref="ob.connector.nodes.all" layout="row" layout-align="start center">
+      <a href ui-sref="material.nodes" layout="row" layout-align="start center">
         <i class="fa fa-plug fa-lg"></i>
         <span>Connect</span>
       </a>
