--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -41,6 +41,7 @@
     <div ng-if="nodes.length">
         <div ng-repeat="node in nodes | filter: {name:nodeSearch} | filter: filterFlows | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <h4 class="text-center">
+                <pre>{{node.category}} - {{nextStepUrl(node)}}</pre>
                 <a href ng-href="{{nextStepUrl(node)}}" class="">
                     <div title="{{node.name}}" class="node-thumbnail animated-popout"
                          ng-style="{ 'background-image': 'url(' + node.logo + ')' }" title="{{node.name}}"
