Add material to channel detail page

--- a/public/pages/connector/channels/detail.html
+++ b/public/pages/connector/channels/detail.html
@@ -1,3 +1,15 @@
+<md-toolbar md-theme="indigo">
+  <h2 class="md-toolbar-tools page-heading">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
+
+    <span>Channel</span>
+  </h2>
+</md-toolbar>
+
+<br>
+
 <h2 class="text-center">Manage {{channel.name}}</h2>
 <br>
 <div class="row">
