Migrate add-channel to sidebar nav

--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -40,7 +40,7 @@
     <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 device-actions">
         <div>
             <div class="btn-group btn-group-justified">
-                <a class="btn btn-primary" href ui-sref="ob.nodewizard.addnode">
+                <a class="btn btn-primary" href ui-sref="material.nodewizard.addnode">
                     <i class="fa fa-magic"></i>
                     Wizard
                 </a>
