--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -31,7 +31,7 @@
     <div class="col-md-6">
       <div class="well">
         <h2>
-          <a href ui-sref="ob.design" class="text-normal-color">
+          <a href ui-sref="material.design" class="text-normal-color">
             <i class="fa fa-edit fa-2x"></i>&nbsp;
             DESIGN
           </a>
