--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -25,7 +25,7 @@
       </div>
       <div class="form-group">
         <div class="btn-group btn-group-justified">
-          <a class="btn btn-primary btn-lg" href ui-sref="ob.nodewizard.addnode">
+          <a class="btn btn-primary btn-lg" href ui-sref="material.nodewizard.addnode">
             <i class="fa fa-plus fa-lg"></i>
             Add New Node
           </a>
