--- a/public/pages/flow-editor-omnibox.html
+++ b/public/pages/flow-editor-omnibox.html
@@ -19,7 +19,7 @@
               Click Setup to start configuring this node
             </p>
             <br>
-            <a ui-sref="ob.nodewizard.add({nodeTypeId: nodeType._id})" class="btn btn-primary btn-lg btn-block">Setup</a>
+            <a ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})" class="btn btn-primary btn-lg btn-block">Setup</a>
           </div>
         </div>
       </div>
