--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -15,7 +15,7 @@
         <i class="fa fa-plug fa-lg"></i>
         <span>Connect</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="design" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.design" layout="row" layout-align="start center">
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
