--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -20,7 +20,7 @@
 <div class="row">
   <div ng-repeat="nodeType in nodeTypes | filter: {name:nodeTypeSearch} | orderBy: 'name'" class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
     <h4 class="text-center">
-      <a class="" ui-sref="ob.nodewizard.add({nodeTypeId: nodeType._id})">
+      <a class="" ui-sref="material.nodewizard.add({nodeTypeId: nodeType._id})">
         <div ng-style="{'background-image': 'url('+nodeType.logo+')'}" title="{{nodeType.name}}" class="node-thumbnail animated-popout"></div>
         <strong class="muted-link">{{nodeType.name}}</strong>
       </a>
