--- a/public/pages/node-wizard/index.html
+++ b/public/pages/node-wizard/index.html
@@ -1,6 +1,20 @@
-<div class="col-xs-12">
-  <div class="page-header page-header-with-buttons">
-  </div>
+<md-toolbar md-theme="indigo">
+  <h2 class="md-toolbar-tools page-heading">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
 
-  <div ui-view></div>
-</div>
+    <span>Add Node</span>
+  </h2>
+</md-toolbar>
+
+<br>
+
+<md-content>
+  <div class="col-xs-12">
+    <div class="page-header page-header-with-buttons">
+    </div>
+
+    <div ui-view></div>
+  </div>
+</md-content>
