--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -35,14 +35,14 @@
         <i class="fa fa-lock fa-lg"></i>
         <span>Admin</span>
       </a>
-      <a href ui-sref="ob.community" layout="row" layout-align="start center">
+      <a href="http://hackster.io/octoblu" layout="row" layout-align="start center">
         <i class="fa fa-group fa-lg"></i>
         <span>Community</span>
       </a>
 
       <md-divider></md-divider>
 
-      <a href ui-sref="ob.profile" layout="row" layout-align="start center">
+      <a href ui-sref="material.profile" layout="row" layout-align="start center">
         <i class="fa fa-user fa-lg"></i>
         <span>Profile</span>
       </a>
