move profile to new sidebar

--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -42,7 +42,7 @@
 
       <md-divider></md-divider>
 
-      <a href ng-click="closeNav()" ui-sref="ob.profile" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.profile" layout="row" layout-align="start center">
         <i class="fa fa-user fa-lg"></i>
         <span>Profile</span>
       </a>
