--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,15 +1,16 @@
-<div class="col-xs-12">
-  <div class="row">
-    <div class="col-xs-12">
-      <div class="page-header page-header-with-buttons">
-        <h1>
-          <i class="fa fa-user"></i>
-          <span>Profile - {{currentUser.displayName}}</span>
-        </h1>
-      </div>
-    </div>
-  </div>
+<md-toolbar md-theme="indigo">
+  <h2 class="md-toolbar-tools page-heading">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
 
+    <span>Profile - {{currentUser.displayName}}</span>
+  </h2>
+</md-toolbar>
+
+<br>
+
+<div class="col-xs-12">
   <div class="row">
     <div class="col-xs-12">
         <div class="alert alert-info">
