--- a/public/pages/process.html
+++ b/public/pages/process.html
@@ -1,3 +1,15 @@
+<md-toolbar md-theme="indigo">
+  <h2 class="md-toolbar-tools page-heading">
+    <a href class="menu-icon" ng-click="toggleNav()">
+      <i class="fa fa-bars"></i>
+    </a>
+
+    <span>Process</span>
+  </h2>
+</md-toolbar>
+
+<br>
+
 <style type="text/css">
     .dashboard-panel {
         text-align: center;
@@ -11,12 +23,6 @@
 </style>
 
 <div class="col-xs-12">
-    <div class="page-header page-header-with-buttons">
-        <h1>
-            <i class="fa fa-tasks"></i>
-            <span>Process</span>
-        </h1>
-    </div>
     <div>
         <message-grapher></message-grapher>
     </div>
