--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -19,11 +19,11 @@
         <i class="fa fa-edit fa-lg"></i>
         <span>Design</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="ob.process" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.process" layout="row" layout-align="start center">
         <i class="fa fa-tasks fa-lg"></i>
         <span>Process</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="ob.analyze" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.analyze" layout="row" layout-align="start center">
         <i class="fa fa-bar-chart-o fa-lg"></i>
         <span>Analyze</span>
       </a>
