--- a/public/pages/material.html
+++ b/public/pages/material.html
@@ -31,7 +31,7 @@
         <i class="fa fa-file-text fa-lg"></i>
         <span>Templates</span>
       </a>
-      <a href ng-click="closeNav()" ui-sref="ob.admin.all" layout="row" layout-align="start center">
+      <a href ng-click="closeNav()" ui-sref="material.admin.all" layout="row" layout-align="start center">
         <i class="fa fa-lock fa-lg"></i>
         <span>Admin</span>
       </a>
