--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -48,7 +48,7 @@
     <div class="col-md-6">
       <div class="well">
         <h2>
-          <a href ui-sref="ob.process" class="text-normal-color">
+          <a href ui-sref="material.process" class="text-normal-color">
             <i class="fa fa-tasks fa-2x"></i>&nbsp;
             PROCESS
           </a>
@@ -62,7 +62,7 @@
     </div>
     <div class="col-md-6">
       <div class="well">
-        <a href ui-sref="ob.analyze" class="text-normal-color">
+        <a href ui-sref="material.analyze" class="text-normal-color">
           <h2>
             <i class="fa fa-bar-chart-o fa-2x"></i>&nbsp;
             ANALYZE
