--- a/public/pages/octoblu.html
+++ b/public/pages/octoblu.html
@@ -22,7 +22,7 @@
                     </a>
                     <ul class="dropdown-menu" role="menu" aria-labelledby="profile-drop-down-menu">
                         <li>
-                            <a href="" ui-sref="ob.profile">
+                            <a href="" ui-sref="material.profile">
                                 <i class="fa fa-user"></i> Profile
                             </a>
                         </li>
@@ -37,11 +37,11 @@
                 <li ui-sref-active="active"><a href ui-sref="material.home"><i class="fa fa-home fa-lg"></i>&nbsp;Home</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.nodes"><i class="fa fa-plug fa-lg"></i>&nbsp;Connect</a></li>
                 <li ui-sref-active="active"><a href ui-sref="design"><i class="fa fa-edit fa-lg"></i>&nbsp;Design</a></li>
-                <li ui-sref-active="active"><a href ui-sref="ob.process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
-                <li ui-sref-active="active"><a href ui-sref="ob.analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.process"><i class="fa fa-tasks fa-lg"></i>&nbsp;Process</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.analyze"><i class="fa fa-bar-chart-o fa-lg"></i>&nbsp;Analyze</a></li>
                 <li ui-sref-active="active"><a href ui-sref="material.templates"><i class="fa fa-file-text fa-lg"></i>&nbsp;Templates</a></li>
-                <li ui-sref-active="active"><a href ui-sref="ob.admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
-                <li ui-sref-active="active"><a href ui-sref="ob.community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.admin.all"><i class="fa fa-lock fa-lg"></i>&nbsp;Admin</a></li>
+                <li ui-sref-active="active"><a href ui-sref="material.community"><i class="fa fa-group fa-lg"></i>&nbsp;Community</a></li>
             </ul>
         </div><!-- /.navbar-collapse -->
     </div>
