--- a/public/pages/flow.html
+++ b/public/pages/flow.html
@@ -56,12 +56,12 @@
       </div>
 
       <div flex>
-        <md-button ng-click="stop()" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }">
+        <md-button ng-click="stop()" class="stop-button" ng-class="{ 'btn-danger': deviceOnline === false, stopping: stopping }">
           <md-tooltip>Stop</md-tooltip>
           <i class="fa fa-stop"></i>
         </md-button>
 
-        <md-button ng-click="start()" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }">
+        <md-button ng-click="start()" class="start-button" ng-class="{ 'btn-info': deviceOnline, deploying: deploying }">
           <md-tooltip>Start</md-tooltip>
           <i class="fa fa-play"></i>
         </md-button>
