Navigate to designer after channel activation

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <meta content="text/html;charset=utf-8" http-equiv="content-type">
     <meta name="description" content="Octoblu - Internet of Everything!">
     <meta name="author" content="Octoblu">
+    <meta name="theme-color" content="#3f51b5">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:700,300,600,400" rel='stylesheet' type='text/css'>
     <link href="/assets/images/meta_icons/favicon.ico" rel="shortcut icon" type="image/x-icon">
     <link href="/assets/images/meta_icons/apple-touch-icon.png" rel="apple-touch-icon-precomposed">
