--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -17,7 +17,7 @@
     <form class="form">
       <div class="form-group">
         <div class="input-group">
-          <input type="text" class="form-control" ng-model="nodeSearch">
+          <input type="text" class="form-control" ng-model="nodeSearch" autofocus>
           <span class="input-group-addon">
             <i class="fa fa-search"></i>
           </span>
