--- a/public/pages/node-wizard/add-node.html
+++ b/public/pages/node-wizard/add-node.html
@@ -5,7 +5,7 @@
     <form class="form">
       <div class="form-group">
         <div class="input-group">
-          <input type="text" class="form-control" ng-model="nodeTypeSearch">
+          <input type="text" class="form-control" ng-model="nodeTypeSearch" autofocus>
           <span class="input-group-addon">
             <i class="fa fa-search"></i>
           </span>
